# c-pipeline-test

./: .gitignore  CMakeLists.txt  main.c
.github/workflows/: codeql.yaml  main.yaml  valgrind.yaml
src/: main.c
